sass/base/_tables.scss
table {
    min-width: 17em;
    @include trailer;
}

thead {
    border-bottom: 5px solid $dark-blue;
    th {
        text-align:left;
    }
}

tbody tr {
    @include adjust-font-size-to(ms(-1));
    border-bottom: 1px dotted $light-grey;
    &:last-child {
        border-bottom: 0;
    }
}

td {
    // padding: 0 msem(-3);
    // @include rhythm(0,.25,.25,0, ms(0));
    // text-align:left;
}

// In the example markup above you can see several <col> elements with classes whose numbers
// represent a percentage width for that column. You can leave one of the cols class-less
// and it will take up whatever space is left over. You can also use these classes on the
// <table> element to restrict the width of the whole table.
.t5     { width: 5% !important }
.t10    { width:10% !important }
.t12    { width:12.5% !important }     // 1/8
.t15    { width:15% !important }
.t20    { width:20% !important }
.t25    { width:25% !important }       // 1/4
.t30    { width:30% !important }
.t33    { width:33.333% !important }   // 1/3
.t35    { width:35% !important }
.t37    { width:37.5% !important }     // 3/8
.t40    { width:40% !important }
.t45    { width:45% !important }
.t50    { width:50% !important }       // 1/2
.t55    { width:55% !important }
.t60    { width:60% !important }
.t62    { width:62.5% !important }     // 5/8
.t65    { width:65% !important }
.t66    { width:66.666% !important }   // 2/3
.t70    { width:70% !important }
.t75    { width:75% !important }       // 3/4
.t80    { width:80% !important }
.t85    { width:85% !important }
.t87    { width:87.5% !important }     // 7/8
.t90    { width:90% !important }
.t95    { width:95% !important }

@include breakpoint(40em) {
    .tf1    { width: 1em !important }
    .tf2    { width: 2em !important }
}

.table--top-aligned {
    td {
        vertical-align: top;
    }
}

.table-breathe::before
{
    content: '';
    display: block;
    height: 1em;
}

th.table-mid-header {
    font-size: ms(2);
    line-height: ms(3);

    background: $bright-blue;
    border: 3px solid $slightly-less-bright-blue;

    color: white;
    font-weight: bold;
    padding: 0 5px;
    margin : 5px;

    .icon--link {
        float: right;
    }

    .tablesaw-cell-label {
        display: none;
    }
}

.tablesaw-stack {

    .tablesaw-collapse {
        @include breakpoint(40em) {
            display: none;
        }
    }

    .table-priority-45 {
        @include breakpoint(40em) {
            display: none;
        }
        @include breakpoint(45em) {
            display: table-cell;
        }
    }
    .table-priority-50 {
        @include breakpoint(40em) {
            display: none;
        }
        @include breakpoint(50em) {
            display: table-cell;
        }
    }
    .table-priority-55 {
        @include breakpoint(40em) {
            display: none;
        }
        @include breakpoint(55em) {
            display: table-cell;
        }
    }
}

